--- a/src/css/index/clients.scss
+++ b/src/css/index/clients.scss
@@ -12,10 +12,21 @@
 }
 
 .clients__item {
-  padding: 0 2rem;
-  margin-bottom: 3.7rem;
+  padding: 0 1rem;
+  margin-bottom: 2.7rem;
   max-width: 100%;
   width: auto;
+}
+
+.clients__link {
+  border-radius: 10px;
+  padding: 10px;
+
+  transition: box-shadow 0.1s linear;
+
+  &:hover {
+    box-shadow: 0px 4px 25px rgba(0, 0, 0, 0.07);
+  }
 }
 
 .clients__img {
