--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -12,6 +12,7 @@
 @import 'common/header';
 @import 'common/footer';
 @import 'common/burger';
+@import 'common/swiper';
 @import 'common/includes/form';
 @import 'common/includes/callback';
 @import 'common/includes/consult';
