--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -8,7 +8,7 @@ block menu
 block content
   main
     // Intro
-    section#intro.intro(style="background-image: url(images/index/intro/bg.jpg)")
+    //- section#intro.intro(style="background-image: url(images/index/intro/bg.jpg)")
       .container
         .intro__inner
           h2.intro__title Профессиональные бухгалтерские услуги
@@ -18,7 +18,7 @@ block content
             +callbackBtn('Рассчитать стоимость услуг')
 
     // Descrip
-    section#details.descrip
+    //- section#details.descrip
       .container
         h2.descrip__title Аутсорсинг бухгалтерии с ООО &laquo;ОлдТраффорд&raquo; это
         ul.descrip__list
@@ -30,18 +30,20 @@ block content
     section.provider
       .container
         h2.provider__title Занимайтесь бизнесом, а бухгалтерией займемся мы
-        ul.provider__list
-          +providerItem('Рассчитаем заработную плату и налоги Ваших сотрудников')
-          +providerItem('Систематизируем все Ваши доходы и расходы')
-          +providerItem('Соберем бухгалтерский баланс или книгу учета доходов расходов ИП ')
-          +providerItem('Составим отчетность в пенсионный и социальные фонды')
-          +providerItem('Сделаем налоговые декларации')
-          +providerItem('Будем отслеживать требования и письма налоговых служб к Вашей организации')
-          +providerItem('Напомним Вам о сроках налоговых платежей и сдачи отчетности')
-          +providerItem('Подскажем об изменениях в налоговом законодательстве')
+        #swiper-provider.swiper-container
+          ul.provider__list.swiper-wrapper
+            +providerItem('Рассчитаем заработную плату и налоги Ваших сотрудников')
+            +providerItem('Систематизируем все Ваши доходы и расходы')
+            +providerItem('Соберем бухгалтерский баланс или книгу учета доходов расходов ИП ')
+            +providerItem('Составим отчетность в пенсионный и социальные фонды')
+            +providerItem('Сделаем налоговые декларации')
+            +providerItem('Будем отслеживать требования и письма налоговых служб к Вашей организации')
+            +providerItem('Напомним Вам о сроках налоговых платежей и сдачи отчетности')
+            +providerItem('Подскажем об изменениях в налоговом законодательстве')
+          .swiper-pagination
 
     //Pluses
-    section.pluses
+    //- section.pluses
       .container
         h2.pluses__title
           span Плюсы&nbsp;
@@ -58,7 +60,7 @@ block content
           +plusesItem('Наличие дополнительных услуг.')
 
     //Fee
-    section#services.fee
+    //- section#services.fee
       +feeItem('service-complex', 'fee-1.jpg', '01', 'Комплексное бухгалтерское обслуживание')
       +feeItem('service-onetime', 'fee-2.jpg', '02', 'Налоговое консультирование и разовые услуги')
       +feeItem('service-repair', 'fee-3.jpg', '03', 'Восстановление бухгалтерского и налогового учета')
@@ -68,7 +70,7 @@ block content
     +consult('Нужна консультация?', 'Оставьте свою заявку и мы ответим на все ваши вопросы.')
 
     //Company
-    section#about.company(style="background-image: url(images/index/company/bg.jpg)")
+    //- section#about.company
       .container
         .company__inner
           figure.company__img
@@ -84,39 +86,42 @@ block content
               p Мне удалось собрать в своей команде самых лучших. Но я все так же продолжаю лично отслеживать выполнение каждого этапа выполненной работы своих сотрудников и несу личную ответственность перед Вами. Мы никогда не прячем голову в песок, не пытаемся заработать деньги любой ценой и не оставляем клиентов наедине с возникающими проблемами, мы стараемся, чтобы оказываемые нами услуги были выполнены не только на высоком уровне, но и были действительно полезны и нужны вам.
               p Именно наши клиенты и партнеры, наш опыт и команда – это и есть основные ценности компании «ОлдТраффорд». Мы уважаем каждого из наших партнеров и заказчиков, ценим их время и работаем для общего процветания, дорожим своим именем и заботимся о своей репутации, благодаря чему смогли выстроить долговременные доверительные отношения, а также получили признание на рынке и уважение конкурентов.
               p Я отдельно благодарю каждого клиента, хочу сказать спасибо каждому партнеру за  то, что Вы выбрали нас.  А также,  хочу пригласить новых клиентов оценить качество, оперативность, точность оказываемых ООО «ОлдТраффорд» бухгалтерских услуг, комфорт и слаженность работы всей нашей команды.
+            +icon('company__icon', 'quot')
 
     //Features
     section.features
       .container
         +title('Оцените наши преимущества')
-        ul.features__list
-          +featuresItem('like', 'Профессионализм', 'Наши специалисты имеют многолетний опыт обслуживания различных сфер деятельности, постоянно проходят курсы повышения квалификации, участвуют в тематических конференциях и семинарах.')
-          +featuresItem('avatar', 'Индивидуальный подход', 'Индивидуальный план работ для каждого клиента, бухгалтер всегда на связи.')
-          +featuresItem('money', 'Разумная ценовая политика', 'Мы всегда предлагаем самые интересные и адекватные цены.')
-          +featuresItem('protection', 'Риски застрахованы', 'Страховая сумма обеспечивает дополнительную гарантию для наших клиентов')
-          +featuresItem('bank', 'Комплексное обслуживание', 'Мы оказываем полный спектр услуг для бизнеса, если какой-то вопрос находится вне сферы деятельность бухгалтера, то мы подключим другого специалиста нашей команды? юриста, специалиста по кадрам,')
-          +featuresItem('insurance', 'Конфиденциальность', 'Наша компания гарантирует конфиденциальность корпоративной информации')
+        #swiper-features.swiper-container
+          ul.features__list.swiper-wrapper
+            +featuresItem('like', 'Качество и профессионализм', 'Мы не новички, а команда квалифицированных бухгалтеров  имеющих  уникальный опыт в различных отраслях. Мы всегда идем в ногу со временем и повышаем свою квалификацию, учимся и работаем каждый день, чтобы с минимальными затратами для клиентов, предоставить им максимально качественное обслуживание')
+            +featuresItem('avatar', 'Индивидуальный подход', 'Мы подходим к любому  бизнесу клиента с учетом всех его особенностей.  Всегда поможем Вам выбрать самый эффективный путь ведения дел, чтобы оптимизировать систему налогообложения,  снизить налоговые риски и проинформируем  об изменениях в законодательстве, которые могут повлиять непосредственно на Ваш бизнес')
+            +featuresItem('money', 'Разумная ценовая политика', 'Мы ценим свое и Ваше время, поэтому не занижаем цены, чтобы потом продавать дополнительные услуги. Поэтому, подберем для Вашего бизнеса только тот набор услуг, который нужен именно Вам. Оплачивая наши услуги, Вы законно экономите средства, которые предназначены для налоговых сборов  и содержание штатной бухгалтерии')
+            +featuresItem('insurance', 'Риски застрахованы', 'Мы уверены в результате наших услуг и хотим,  чтобы каждый клиент был уверен в нас. Поэтому дополнительно страхуем свою ответственность перед клиентами.   При оказании  услуг,   наша компания несет все финансовые риски  и  гарантирует возмещение  убытков (штрафы, пени и т.д.) на основании  договора страхования  профессиональной ответственности.')
+            +featuresItem('bank', 'Комплексное обслуживание', 'Мы специализируемся  на бухгалтерских услугах и предлагаем каждому клиенту оценить их полный спектр.  При этом, наши клиенты никогда не окажутся без поддержки, если им понадобится помощь за рамками нашей компетенции. При участии опытных и профессиональных партнеров мы будем поддерживать Вас на пути к успеху и процветанию')
+            +featuresItem('protection', 'Безопасность и конфиденциальность', 'Мы дорожим Вашей и своей репутацией, поэтому берем на себя не только финансовую ответственность за весь процесс  предоставления бухгалтерских услуг, но и гарантируем всем своим клиентам на самом высоком уровне конфиденциальность и безопасность информации, которую они нам доверяют ')
+          .swiper-pagination
 
     //Clients
-    section.clients
+    //- section.clients
       .container
         +title('Нам уже доверили свою бухгалтерию')
         ul.clients__list
-          +clientsItem('client-1.jpg')
-          +clientsItem('client-2.jpg')
-          +clientsItem('client-3.jpg')
-          +clientsItem('client-4.jpg')
-          +clientsItem('client-5.jpg')
-          +clientsItem('client-6.jpg')
-          +clientsItem('client-7.jpg')
-          +clientsItem('client-8.jpg')
-          +clientsItem('client-9.jpg')
-          +clientsItem('client-10.jpg')
-          +clientsItem('client-11.jpg')
-          +clientsItem('client-12.jpg')
+          +clientsItem('client-1.jpg', '#')
+          +clientsItem('client-2.jpg', '#')
+          +clientsItem('client-3.jpg', '#')
+          +clientsItem('client-4.jpg', '#')
+          +clientsItem('client-5.jpg', '#')
+          +clientsItem('client-6.jpg', '#')
+          +clientsItem('client-7.jpg', '#')
+          +clientsItem('client-8.jpg', '#')
+          +clientsItem('client-9.jpg', '#')
+          +clientsItem('client-10.jpg', '#')
+          +clientsItem('client-11.jpg', '#')
+          +clientsItem('client-12.jpg', '#')
 
     //Work
-    section.work
+    //- section.work
       .container
         +title('Работать с нами просто')
         .work__inner
@@ -128,7 +133,7 @@ block content
           +callbackBtn
 
     //Map
-    section#contacts.map
+    //- section#contacts.map
       .container
         .map__info
           h2.map__title Контакты ООО "ОлдТраффорд"
