--- a/src/css/index/descrip.scss
+++ b/src/css/index/descrip.scss
@@ -16,24 +16,18 @@
 }
 
 .descrip__item {
-  padding: 2rem;
-  box-shadow: 0px 4px 25px rgba(0, 0, 0, 0.07);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+  padding: 3rem 2rem 3rem 2.8rem;
+
+  border: 1px solid $color-tertiary-beta;
   border-radius: 20px;
 
   &:not(:last-child) {
     margin-bottom: 3rem;
   }
-}
-
-.descrip__wrapper {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-
-  padding: 5rem 2rem 5rem 2.8rem;
-
-  box-shadow: 0px 4px 35px rgba(0, 0, 0, 0.05);
-  border-radius: 20px;
 }
 
 .descrip__feat {
