--- a/src/css/index/pluses.scss
+++ b/src/css/index/pluses.scss
@@ -24,13 +24,6 @@
 .pluses__item {
   display: flex;
   width: 48%;
-
-  &:nth-child(4n + 3),
-  &:nth-child(4n + 4) {
-    .pluses__txt {
-      color: $color-primary-alpha;
-    }
-  }
 }
 
 .pluses__icon {
@@ -41,7 +34,7 @@
 
   margin-right: 1.6rem;
 
-  fill: $color-primary-gamma;
+  // fill: $color-primary-alpha;
 }
 
 .pluses__txt {
