--- a/src/css/index/provider.scss
+++ b/src/css/index/provider.scss
@@ -14,6 +14,14 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
+
+  padding-top: 17px;
+
+  @include media-tablet-sm {
+    flex-wrap: nowrap;
+
+    margin-bottom: 30px;
+  }
 }
 
 .provider__item {
@@ -23,12 +31,21 @@
   align-items: center;
 
   width: 23%;
+  height: auto;
 
   padding: 2.35rem 3rem;
   margin-bottom: 3.6rem;
 
   background-color: $color-tertiary-beta;
   border-radius: 5px;
+
+  @include media-tablet-lg {
+    width: 48%;
+  }
+
+  @include media-tablet-sm {
+    margin-bottom: 0;
+  }
 }
 
 .provider__icon {
