--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -8,7 +8,7 @@ block menu
 block content
   main
     // Intro
-    //- section#intro.intro(style="background-image: url(images/index/intro/bg.jpg)")
+    section#intro.intro(style="background-image: url(images/index/intro/bg.jpg)")
       .container
         .intro__inner
           h2.intro__title Профессиональные бухгалтерские услуги
@@ -18,13 +18,15 @@ block content
             +callbackBtn('Рассчитать стоимость услуг')
 
     // Descrip
-    //- section#details.descrip
+    section#details.descrip
       .container
         h2.descrip__title Аутсорсинг бухгалтерии с ООО &laquo;ОлдТраффорд&raquo; это
-        ul.descrip__list
-          +descripItem(['Выгодно', 'Экономия до 57%'], 'benefit', ['Повышение рентабельности любого бизнеса, так или иначе, затрагивает минимизацию затрат. Любому предпринимателю важно снизить себестоимость продукции или услуг, где не последнее место в списке расходов занимают затраты на содержание административного персонала, в том числе и  бухгалтерии.', 'Сотрудничество с нами снизит расходы Вашей компании за счет отсутствия:'], ['выплат заработной платы сотрудникам, налоговых и иных обязательных отчислений;', 'расходов на организацию рабочих мест (закупку оргтехники, мебели, расходных материалов);', 'затрат на содержание отдельной офисной площади и оплаты коммунальных услуг, услуг связи;', 'расходов на повышение квалификации и мотивации персонала;', 'оплаты за  установку и регулярного обновления современного программного обеспечения.'])
-          +descripItem(['Гарантии', 'до 50 000 BYN'], 'warranty', ['В нашей компании выстроена строгая система контроля качества бухгалтерского и налогового учета, благодаря чему риск ошибок и неточностей в процессе оказания бухгалтерских услуг и подготовки отчетности в государственные органы сводится к минимуму.', 'Но мы гарантируем не только качественный результат, но и несем материальную ответственность перед каждым клиентом. Защита клиента от непредвиденных затрат осуществляется путем добровольного страхования нами профессиональной ответственности (от ошибок и упущений, совершенных или допущенных страхователем, которые будут установлены компетентными органами или вступившим в силу решением суда).', 'Агрегатный лимит ответственности составляет 50 000 BYN (пятьдесят тысяч белорусских рублей) на один страховой случай, а также 5 000 BYN (пять тысяч белорусских рублей) на возмещение судебных расходов.'])
-          +descripItem(['Качество и', 'профессионализм'], 'quality', ['Запросы бизнеса разнообразны, никогда не знаешь, с чем компания столкнется завтра, а только комплексный подход к планированию и учету позволяет снизить налоговую нагрузку за счет грамотной оптимизации налогообложения.', 'Полностью знать нюансы того или иного вопроса может только опытный и высококвалифицированный специалист, содержание которого в штате может быть нерентабельно.  Мы обслуживаем различные сферы деятельности, поэтому в штат нашей компании входят высококвалифицированные бухгалтера, причем не только универсалы, которые чаще обычных бухгалтеров сталкиваются с нестандартными ситуациями, но и специалисты узкого профиля – досконально знающие все тонкости конкретного направления.', 'Объемная экспертная поддержка позволяет нам осуществлять всю работу, связанную с бухгалтерским обслуживанием, максимально быстро, но без ущерба для качества.'])
+        #swiper-descrip.swiper-container
+          ul.descrip__list.swiper-wrapper
+            +descripItem(['Выгодно', 'Экономия до 57%'], 'benefit', ['Повышение рентабельности любого бизнеса, так или иначе, затрагивает минимизацию затрат. Любому предпринимателю важно снизить себестоимость продукции или услуг, где не последнее место в списке расходов занимают затраты на содержание административного персонала, в том числе и  бухгалтерии.', 'Сотрудничество с нами снизит расходы Вашей компании за счет отсутствия:'], ['выплат заработной платы сотрудникам, налоговых и иных обязательных отчислений;', 'расходов на организацию рабочих мест (закупку оргтехники, мебели, расходных материалов);', 'затрат на содержание отдельной офисной площади и оплаты коммунальных услуг, услуг связи;', 'расходов на повышение квалификации и мотивации персонала;', 'оплаты за  установку и регулярного обновления современного программного обеспечения.'])
+            +descripItem(['Гарантии', 'до 50 000 BYN'], 'warranty', ['В нашей компании выстроена строгая система контроля качества бухгалтерского и налогового учета, благодаря чему риск ошибок и неточностей в процессе оказания бухгалтерских услуг и подготовки отчетности в государственные органы сводится к минимуму.', 'Но мы гарантируем не только качественный результат, но и несем материальную ответственность перед каждым клиентом. Защита клиента от непредвиденных затрат осуществляется путем добровольного страхования нами профессиональной ответственности (от ошибок и упущений, совершенных или допущенных страхователем, которые будут установлены компетентными органами или вступившим в силу решением суда).', 'Агрегатный лимит ответственности составляет 50 000 BYN (пятьдесят тысяч белорусских рублей) на один страховой случай, а также 5 000 BYN (пять тысяч белорусских рублей) на возмещение судебных расходов.'])
+            +descripItem(['Качество и', 'профессионализм'], 'quality', ['Запросы бизнеса разнообразны, никогда не знаешь, с чем компания столкнется завтра, а только комплексный подход к планированию и учету позволяет снизить налоговую нагрузку за счет грамотной оптимизации налогообложения.', 'Полностью знать нюансы того или иного вопроса может только опытный и высококвалифицированный специалист, содержание которого в штате может быть нерентабельно.  Мы обслуживаем различные сферы деятельности, поэтому в штат нашей компании входят высококвалифицированные бухгалтера, причем не только универсалы, которые чаще обычных бухгалтеров сталкиваются с нестандартными ситуациями, но и специалисты узкого профиля – досконально знающие все тонкости конкретного направления.', 'Объемная экспертная поддержка позволяет нам осуществлять всю работу, связанную с бухгалтерским обслуживанием, максимально быстро, но без ущерба для качества.'])
+          .swiper-pagination
 
     //Provider
     section.provider
@@ -43,14 +45,14 @@ block content
           .swiper-pagination
 
     //Pluses
-    //- section.pluses
+    section.pluses
       .container
         h2.pluses__title
           span Плюсы&nbsp;
           |работы с нами
         +decorator
         ul.pluses__list
-          +plusesItem('Стоимость услуг может быть ниже, чем зарплата штатного бухгалтера')
+          +plusesItem('Стоимость услуг может быть ниже, чем зарплата штатного бухгалтера.')
           +plusesItem('Мы постоянно учимся и ежегодно повышаем квалификацию за свой счёт.')
           +plusesItem('Наши услуги застрахованы.')
           +plusesItem('Конфиденциальность. Мы храним коммерческую тайну.')
@@ -60,17 +62,20 @@ block content
           +plusesItem('Наличие дополнительных услуг.')
 
     //Fee
-    //- section#services.fee
-      +feeItem('service-complex', 'fee-1.jpg', '01', 'Комплексное бухгалтерское обслуживание')
-      +feeItem('service-onetime', 'fee-2.jpg', '02', 'Налоговое консультирование и разовые услуги')
-      +feeItem('service-repair', 'fee-3.jpg', '03', 'Восстановление бухгалтерского и налогового учета')
-      +feeItem('service-law', 'fee-4.jpg', '04', 'Юридические услуги, кадровый учет')
+    section#services.fee
+      nav#swiper-fee.swiper-container
+        ul.fee__list.swiper-wrapper
+          +feeItem('service-complex', 'fee-1.jpg', '01', 'Комплексное бухгалтерское обслуживание')
+          +feeItem('service-onetime', 'fee-2.jpg', '02', 'Налоговое консультирование и разовые услуги')
+          +feeItem('service-repair', 'fee-3.jpg', '03', 'Восстановление бухгалтерского и налогового учета')
+          +feeItem('service-law', 'fee-4.jpg', '04', 'Юридические услуги, кадровый учет')
+        .swiper-pagination
 
     //Consult
     +consult('Нужна консультация?', 'Оставьте свою заявку и мы ответим на все ваши вопросы.')
 
     //Company
-    //- section#about.company
+    section#about.company
       .container
         .company__inner
           figure.company__img
@@ -103,37 +108,40 @@ block content
           .swiper-pagination
 
     //Clients
-    //- section.clients
+    section.clients
       .container
         +title('Нам уже доверили свою бухгалтерию')
-        ul.clients__list
-          +clientsItem('client-1.jpg', '#')
-          +clientsItem('client-2.jpg', '#')
-          +clientsItem('client-3.jpg', '#')
-          +clientsItem('client-4.jpg', '#')
-          +clientsItem('client-5.jpg', '#')
-          +clientsItem('client-6.jpg', '#')
-          +clientsItem('client-7.jpg', '#')
-          +clientsItem('client-8.jpg', '#')
-          +clientsItem('client-9.jpg', '#')
-          +clientsItem('client-10.jpg', '#')
-          +clientsItem('client-11.jpg', '#')
-          +clientsItem('client-12.jpg', '#')
+        #swiper-clients.swiper-container
+          ul.clients__list.swiper-wrapper
+            +clientsItem('client-1.jpg', '#')
+            +clientsItem('client-2.jpg', '#')
+            +clientsItem('client-3.jpg', '#')
+            +clientsItem('client-4.jpg', '#')
+            +clientsItem('client-5.jpg', '#')
+            +clientsItem('client-6.jpg', '#')
+            +clientsItem('client-7.jpg', '#')
+            +clientsItem('client-8.jpg', '#')
+            +clientsItem('client-9.jpg', '#')
+            +clientsItem('client-10.jpg', '#')
+            +clientsItem('client-11.jpg', '#')
+            +clientsItem('client-12.jpg', '#')
+          .swiper-pagination
 
     //Work
-    //- section.work
+    section.work
       .container
         +title('Работать с нами просто')
-        .work__inner
-          ul.work__list
+        #swiper-work.swiper-container
+          ul.work__list.swiper-wrapper
             +workItem('work-1', '01', 'Свяжитесь с нами любым удобным способом')
             +workItem('work-2', '02', 'Получите консультацию по всем вопросам')
             +workItem('work-3', '03', 'Заключите договор на необходимые услуги')
             +workItem('work-4', '04', 'Предоставьте документацию бухгалтеру')
-          +callbackBtn
+          .swiper-pagination
+        +callbackBtn
 
     //Map
-    //- section#contacts.map
+    section#contacts.map.map--main
       .container
         .map__info
           h2.map__title Контакты ООО "ОлдТраффорд"
