--- a/src/css/common/footer.scss
+++ b/src/css/common/footer.scss
@@ -2,6 +2,10 @@
   padding: 3.2rem 0 0.9rem;
 
   background-color: $color-tertiary-beta;
+
+  @include media-tablet-sm {
+    padding: 47rem 0 0.9rem;
+  }
 }
 
 .footer__inner {
