--- a/src/css/common/includes/callback.scss
+++ b/src/css/common/includes/callback.scss
@@ -1,5 +1,7 @@
 .callback {
   @include button(2rem, 5.5rem);
 
-  margin-bottom: 2.8rem;
+  &:not(:last-child) {
+    margin-bottom: 2.8rem;
+  }
 }
