--- a/src/css/index/company.scss
+++ b/src/css/index/company.scss
@@ -9,14 +9,27 @@
 .company__inner {
   display: flex;
   align-items: center;
+
+  @include media-tablet-lg {
+    flex-direction: column;
+  }
 }
 
 .company__img {
   max-width: 40rem;
+  min-width: 40rem;
 
   margin-right: 7rem;
 
   filter: drop-shadow(0px 10px 25px rgba(0, 0, 0, 0.04));
+
+  @include media-tablet-lg {
+    max-width: 30rem;
+    min-width: unset;
+
+    margin-left: 0;
+    margin-right: 0;
+  }
 
   img {
     margin-bottom: 3.2rem;
@@ -26,11 +39,12 @@
 
   figcaption {
     text-align: center;
-    font-size: 2.2rem;
     font-family: $font-secondary;
 
     p:not(:last-child) {
       margin-bottom: 1rem;
+
+      font-size: 2.2rem;
     }
 
     p:last-child {
@@ -48,6 +62,12 @@
   font-family: $font-secondary;
 
   line-height: 3.9rem;
+
+  @include media-tablet-lg {
+    max-width: unset;
+
+    text-align: center;
+  }
 }
 
 .company__info {
@@ -55,6 +75,12 @@
   flex-direction: column;
 
   max-width: 70rem;
+
+  // padding-left: 3rem;
+
+  @include media-tablet-lg {
+    max-width: unset;
+  }
 }
 
 .company__txt {
@@ -69,8 +95,8 @@
 }
 
 .company__icon {
-  width: 63px;
-  height: 63px;
+  width: 6.3rem;
+  height: 6.3rem;
 
   align-self: flex-end;
 }
