--- a/src/css/index/intro.scss
+++ b/src/css/index/intro.scss
@@ -1,9 +1,13 @@
 .intro {
-  padding: 19.5rem 0 25.8rem;
+  padding: 19.5rem 0 28.5rem;
 
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
+
+  @include media-tablet-sm {
+    padding: 10rem 0 6.5rem;
+  }
 }
 
 .intro__inner {
@@ -18,6 +22,14 @@
   text-align: center;
   font-size: 3.8rem;
   font-family: $font-secondary;
+
+  @include media-tablet-lg {
+    font-size: 3rem;
+  }
+
+  @include media-smartphone-lg {
+    font-size: 2.6rem;
+  }
 }
 
 .intro__subtitle {
@@ -25,25 +37,45 @@
   text-align: center;
 
   margin-bottom: 4.6rem;
+
+  @include media-smartphone-lg {
+    font-size: 1.8rem;
+  }
 }
 
 .intro__buttons {
+  display: flex;
+  align-items: flex-start;
+  justify-content: center;
+  flex-wrap: wrap;
+
   .callback {
     @include button(1.47em, 1.75em);
 
     color: $color-primary-alpha;
     background-color: none;
+    margin-bottom: 0;
 
     &:hover {
       color: $color-primary-beta;
     }
+  }
+
+  @include media-smartphone-lg {
+    flex-direction: column;
+    align-items: initial;
   }
 }
 
 .intro__link {
   @include button(1.47em, 4.625em);
 
-  &:not(:last-child) {
-    margin-right: 3rem;
+  text-align: center;
+
+  margin-right: 3rem;
+
+  @include media-smartphone-lg {
+    margin-right: 0;
+    margin-bottom: 2rem;
   }
 }
