--- a/src/css/index/map.scss
+++ b/src/css/index/map.scss
@@ -1,9 +1,19 @@
 .map {
   position: relative;
 
+  min-height: 70rem;
+
+  background-color: $color-tertiary-beta;
+
   @include location(row, 16px, 500, 16px, column);
 
-  min-height: 70rem;
+  .location {
+    margin-right: 0;
+
+    &__address {
+      margin-bottom: 13px;
+    }
+  }
 
   @include media-laptop {
     min-height: 50rem;
@@ -12,6 +22,23 @@
   @media only screen and (orientation: landscape) and (max-width: $media-lg) {
     width: 85%;
     margin: 0 auto;
+
+    &--main {
+      width: 100%;
+    }
+  }
+
+  @media only screen and (orientation: landscape) and (max-width: $media-md) {
+    &--main {
+      width: 85%;
+      margin: 0 auto;
+    }
+  }
+
+  @include media-tablet-sm {
+    &--main {
+      min-height: 50rem;
+    }
   }
 
   @include media-smartphone-sm {
@@ -35,25 +62,46 @@
 
   z-index: 1;
 
-  max-width: 47rem;
+  max-width: 36.8rem;
   width: 100%;
 
-  padding: 3.8rem 10.4rem 4.1rem 7rem;
+  padding: 3.8rem 3rem 4.1rem 4.2rem;
 
   background-color: $color-primary-beta;
   box-shadow: 0px 10px 30px rgba(0, 0, 0, 0.03);
 
   border-radius: 7px;
 
+  @include media-desktop {
+    left: 10%;
+  }
+
+  @include media-tablet-sm {
+    top: 70%;
+    left: 50%;
+
+    transform: translateX(-50%);
+  }
+
+  @include media-smartphone-sm {
+    max-width: 34rem;
+  }
+
   .phones {
     @include phones(column);
 
     font-size: 1.8rem;
+
+    li {
+      &:not(:last-child) {
+        margin-bottom: 5px;
+      }
+    }
   }
 }
 
 .map__item {
-  margin-bottom: 1.6rem;
+  margin-bottom: 2.3rem;
 }
 
 .map__title {
@@ -82,6 +130,8 @@
 }
 
 .map__link {
+  align-self: flex-start;
+
   font-size: 1.8rem;
   color: $color-primary-alpha;
 
