--- a/src/css/pages/service-complex/complex.scss
+++ b/src/css/pages/service-complex/complex.scss
@@ -54,7 +54,7 @@
   flex-direction: column;
   align-items: center;
 
-  padding: 2.8rem 2rem 0 2rem;
+  padding: 2.8rem 2rem;
 
   background-color: lighten($color-tertiary-beta, 3.5);
   border-radius: 10px;
