--- a/src/pages/common/header.pug
+++ b/src/pages/common/header.pug
@@ -5,6 +5,7 @@ header#header.header
   #header-top-wrapper.header__top-wrapper.container
     #header-top.header__top
       block menu
+        +menu
       a.header__mail(href="mailto:buhsale@mail.ru")
         +icon('header__icon icon', 'message')
         p buhsale@mail.ru
